--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,16 +1,125 @@
-input {
-  padding: 5px;
-  margin: 5px;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* End of reset */
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+}
+
+header {
+  height: 100px;
+  color: white;
+  background-color: #550015;
 }
 
 div {
-  border: 2px solid grey;
+  padding: 10px;
+}
+
+h1 {
+  font-size: 40px;
+  text-align: center;
+  padding: 20px;
+}
+
+h3 {
+  font-size: 25px;
+  padding: 20px 0;
+}
+
+input {
+  padding: 5px;
+  margin: 5px;
 }
 
 label {
   display: block;
 }
 
+button {
+  margin: 5px;
+  background-color: white;
+  border-radius: 4px;
+  padding: 7px;
+  border: 2px solid lightgrey;
+}
+
+button:hover {
+  border: 2px solid #550015;
+  background-color: #550015;
+  color: white;
+}
+
+strong {
+  font-weight: 600;
+  font-size: 18px;
+}
+
+div.contact {
+  border: 1px solid lightgray;
+}
+
+div.email, div.phone_number {
+  margin: 3px 0;
+}
+
 #contactFormWrapper {
   display: none;
+}
+
+#controls, footer {
+  background-color: lightgrey;
+  height: 50px;
+}
+
+#contacts {
+  padding: 0;
 }
