Improve layout for add and edit contact form

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -87,10 +87,13 @@ p {
 input {
   padding: 5px;
   margin: 5px;
+  width: 200px;
 }
 
 label {
   display: block;
+  width: 400px;
+  padding-top: 4px;
 }
 
 button {
