Implement error messages for bad inputs.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -123,6 +123,10 @@ header, footer {
   padding: 10px;
 }
 
+.invalid {
+  color: #820020;
+}
+
 .tag {
   border: 1px solid lightcoral;
   background-color: lightgray;
