--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -72,7 +72,8 @@ h1 {
 
 h2 {
   font-size: 30px;
-
+  padding-top: 10px;
+  padding-left: 10px;
 }
 
 h3 {
@@ -121,6 +122,7 @@ footer {
 
 header, footer {
   padding: 10px;
+  text-align: center;
 }
 
 .invalid {
