--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -154,8 +154,18 @@ div.email, div.phone_number {
   margin: 3px 0;
 }
 
+#flashMessage {
+  padding: 0;
+  max-height: 50px;
+  overflow: hidden;
+  transition: max-height 0.75s ease-in;
+  transition: max-height 0.75s ease-out;
+}
+
 #flashMessage.hidden {
-  display: none;
+  overflow: hidden;
+  max-height: 0;
+  /* transition: max-height 0.75s ease-in; */
 }
 
 #controls .tag {
